--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "bootstrap": "^5.3.0",
-    "@supabase/supabase-js": "^2.38.0"
+    "@supabase/supabase-js": "^2.38.0",
+    "html2canvas": "^1.4.1",
+    "sweetalert2": "^11.22.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
