--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "bootstrap": "^5.3.0",
+        "react-router-dom": "^7.8.2",
+
     "@supabase/supabase-js": "^2.38.0",
     "html2canvas": "^1.4.1",
     "sweetalert2": "^11.22.5"
